...
  <string name="button_no">No</string>
  <string name="create_profile_date_of_birth">Enter Date of Birth</string>
  <string-array name="create_profile_gender_array">
    <item>Select Gender</item>
    <item>Female</item>
    <item>Male</item>
    <item>Other</item>
  </string-array>
  <string name="create_profile_back_out_title">Leaving Profile Creation</string>
  <string name="create_profile_back_out_content">Are you sure that you\'d like to cancel your profile creation? You will have to resubmit your user information.</string>
  <string name="create_profile_are_you">Are you:</string>
  <string name="create_profile_client">Person in Recovery/Seeking Recovery</string>
  <string name="create_profile_support">Family or Support Person</string>
...
    <item>8 (Great)</item>
    <item>9 (Great)</item>
    <item>10 (Great)</item>
  </string-array>
  <string name="activity_back_navigation_button">Return to Activity Page</string>
  <string name="activity_startup_landing">Welcome To Your Recovery</string>
  <string name="activity_startup_create">Create Profile</string>
  <string name= "experience"> We would like to know about your experience </string>
  <string name= "directions_tea"> Express the extent of changes in four areas:  Substance use, Health, Lifestyle, and Community. \n\n For each area, think about how things have become.  Choose from the scale below, the more you have improved, the higher the number. \n\n At the end, write down the one or two changes most important to you in the remarks section.</string>
  <string name = "proceed_to_assessment"> Proceed to Assessment </string>
  <string name = "treatment_experience_assessment">Treatment Experience Assessment</string>
  <string name="volition">Volition</string>
  <string name="readJournalResponse">Reading Response / Journal</string>
...
