<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".StartupLandingActivity"
  android:background="@drawable/ic_page_border">

  <ImageView
    android:id="@+id/resBackground"
    android:layout_width="381dp"
    android:layout_height="359dp"
    android:layout_marginStart="52dp"
    android:alpha=".33"
    android:contentDescription="@string/dosage_choice_res_logo"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.307"
    app:srcCompat="@drawable/pic"/>
  <TextView
    android:id="@+id/startup_landing_text"
    android:textStyle="bold"
    android:layout_width="294dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="72dp"
    android:layout_marginEnd="32dp"
    android:text="@string/activity_startup_landing"
    android:textAlignment="center"
    android:textColor="@android:color/black"
    android:textSize="45sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
  <Button
    android:id="@+id/start_landing_button_create"
    android:layout_width="140dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="56dp"
    android:layout_marginEnd="108dp"
    android:background="@drawable/ic_button_rectangle"
    android:text="@string/activity_startup_create"
    android:textColor="@android:color/black"
    android:textSize="16sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/startup_landing_text"/>

</android.support.constraint.ConstraintLayout>